maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:75: error: illegal start of simple expression
    }
    ^